tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__text-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\\\"Hello, {name}!\\\"\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Text(
                    (),
                    [
                        Text(
                            "Hello, ",
                        ),
                        Expression(
                            (),
                            VariableGet(
                                Variable(
                                    "name",
                                ),
                            ),
                            (),
                        ),
                        Text(
                            "!",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
