tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__text-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\\\"Hello, {name}! How are you?\\\"\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Text(
                    (),
                    [
                        Text(
                            "Hello, ",
                        ),
                        Expression(
                            (),
                            VariableGet(
                                Variable(
                                    "name",
                                ),
                            ),
                            (),
                        ),
                        Text(
                            "! How are you?",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
