tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__text-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(r#\"\"\\\"text in quotes\\\" \\\\\"\"#).unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Text(
                    (),
                    [
                        Escape(
                            (),
                            "\"",
                        ),
                        Text(
                            "text in quotes",
                        ),
                        Escape(
                            (),
                            "\"",
                        ),
                        Text(
                            " ",
                        ),
                        Escape(
                            (),
                            "\\",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
