tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__text.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\\\"Hello, world!\\\"\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Text(
                    (),
                    [
                        Text(
                            "Hello, world!",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
