tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__var_init.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"let a = 10\").unwrap()"
---
Statement(
    [
        Statement(
            VariableInit(
                (),
                Variable(
                    "a",
                ),
                (),
                Number(
                    10.0,
                ),
            ),
        ),
    ],
)
