tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__var_set.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"a = 10\").unwrap()"
---
Statement(
    [
        Statement(
            VariableSet(
                Variable(
                    "a",
                ),
                (),
                Number(
                    10.0,
                ),
            ),
        ),
    ],
)
