tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__variable_get-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"name1\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                VariableGet(
                    Variable(
                        "name1",
                    ),
                ),
            ),
        ),
    ],
)
